# SimpleAria2QtTable

./: CMakeLists.txt  DownloadManager.ui  README.md  SimpleAria2QtTable.cpp  SimpleAria2RPCqtTable.cpp  test-downloadlinks.txt
downloadtest/: downloadlinks - mintISO.txt  downloadlinks - 副本.txt  downloadlinks.txt
